# anilist-recommender

./: LICENSE  README.md  pyproject.toml
anilist-recommender/: args.py  filter.py  media.py  prep.py  user.py
src/: anime.py  args.py  filter.py  main.py  manga.py  media.py  prep.py  user.py
